# ToolWeaver

./: .env.example  .gitignore  CONTRIBUTING.md  ISSUES_TODO.md  LICENSE  NOTICE  NOT_YET_COMPLETED.md  PHASE_0_COMPLETION_PLAN.md  PROJECT_COMPLETE.md  PUBLISH_CHECKLIST.md  README.md  STATUS_REPORT.md  all_errors.txt  codecov.yml  conftest.py  demo_integrated.py  demo_tool_examples.py  docker-compose.yml  example_plan.json  example_plan_hybrid.json  f821_errors.json  f821_remaining.json  mkdocs.yml  mypy.ini  mypy_final.txt  mypy_latest.txt  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.txt  setup.py  test_azure_cv.py  test_collaboration.py  test_improvements.py  test_phi3_output.py  test_results.txt  update.json  usage_examples.py
.changelog/: template.md
.github/workflows/: ci.yml  clean-install.yml  docs.yml  lint-public.yml  release.yml  test-matrix.yml  type-check.yml
benchmarks/: README.md
benchmarks/results/: current_baseline_baseline.json
benchmarks/task_suites/: control_flow.json  standard.json
docs/: AZURE_SETUP.md  CONFIGURATION.md  DOCUMENTATION_BEST_PRACTICES.md  DYNAMIC_TOOL_DISCOVERY_IMPLEMENTATION.md  FEATURES_GUIDE.md  FREE_TIER_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION.md  IMPLEMENTATION_REVIEW.md  LINK_VERIFICATION_REPORT.md  MIGRATION_GUIDE.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_PERFORMANCE_RESULTS.md  PHASE7_SCALE_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md  QDRANT_SETUP.md  README.md  REDIS_SETUP.md  SMALL_MODEL_IMPROVEMENTS.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_USAGE_GUIDE.md  index.md
docs/concepts/: index.md  overview.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  SQLITE_GRAFANA_SETUP.md  azure-setup.md  index.md  production-deployment.md  qdrant-setup.md  redis-setup.md  sqlite-grafana-setup.md
docs/developer-guide/: ARCHITECTURE.md  COVERAGE_ANALYSIS.md  IMPLEMENTATION.md  PACKAGE_STRUCTURE.md  PUBLISHING.md  SKILL_APPROVAL.md  SKILL_LIBRARY_WIRING.md  SKILL_REGISTRY.md  index.md
docs/for-contributors/: architecture.md  plugins.md  security.md  testing.md
docs/for-package-users/: discovering-tools.md  external-mcp.md  faq.md  quickstart.md  registering-tools.md
docs/get-started/: index.md  installation.md  quickstart.md
docs/getting-started/: registering-tools.md  semantic-search.md  skill-bridge.md
docs/how-it-works/: README.md
docs/how-to/: add-a-tool.md  add-approval-gates.md  aggregate-agent-results.md  caching.md  configure-a2a-agents.md  create-skill-package.md  extend-with-plugins.md  implement-retry-logic.md  index.md  monitor-performance.md  optimize-tool-costs.md  orchestrate-with-code.md  parallel-dispatch.md
docs/internal/: A2A_INTEGRATION_PLAN.md  AGENT_ORCHESTRATION_ROADMAP.md  AGENT_UX_AND_MARKET_POSITIONING.md  ANTHROPIC_MCP_COMPARISON.md  COMPLETED_AND_NEXT_STEPS.md  CONSOLIDATED_TODOS.md  DELIVERY_PACKAGE.md  EXAMPLES_MODERNIZATION_HANDOFF.md  EXAMPLES_TESTING_PROGRESS.md  EXAMPLES_TEST_SUMMARY.md  FEATURES_MAPPING.md  INTEGRATION_ASSESSMENT.md  INTERNAL_DOCS_STRUCTURE.md  NEXT_STEPS.md  NEXT_STEPS_SUMMARY.md  NOT_YET_COMPLETED.md  PACKAGE_VS_FRAMEWORK_DECISION.md  PHASE_0_COMPLETE.md  PHASE_0_PROGRESS.md  PHASE_1_COMPLETION.md  README.md  RELEASES.md  ROADMAP.md  SETUP_COMPLETION_REPORT.md  TEMPLATE_IMPLEMENTATION_PLAN.md  TOMORROW_PLAN.md  code_mode_sandbox.md
docs/product/: comparison.md  faq.md  how-it-works.md  index.md  overview.md  performance.md  project-overview.md  security.md  use-cases.md  why-toolweaver.md
docs/reference/: ANALYTICS_BACKENDS.md  ANALYTICS_GUIDE.md  ANALYTICS_STRATEGY.md  MIGRATION_GUIDE.md  PHASE5_ANALYTICS_COMPLETE.md  PHASE_5_QUICK_START.md  PROMPT_CACHING.md  SKILL_LIBRARY.md  TWO_MODEL_ARCHITECTURE.md  api.md  cli.md  config.md  index.md
docs/samples/: README.md  index.md  (+2 more)
documentation/: DOCS_AUDIT_AND_PLAN.md  PHASES_OVERVIEW.md  README.md
examples/: README.md  TESTING_REPORT.md  check_structure.py  run_planner_demo.py  test_all_examples.py  test_discovery.py  test_github_mcp.py  test_monitoring_integration.py  test_search.py
orchestrator/: __init__.py  cli.py  code_exec_worker.py  code_generator.py  config.py  context_tracker.py  control_flow_patterns.py  evaluation.py  functions.py  hybrid_dispatcher.py  mcp_client.py  models.py  monitoring.py  monitoring_backends.py  orchestrator.py  planner.py  programmatic_executor.py  py.typed  redis_cache.py  sandbox.py  sharded_catalog.py  small_model_worker.py  tool_discovery.py  tool_executor.py  tool_filesystem.py  tool_search.py  tool_search_tool.py  vector_search.py  workers.py  workflow.py  workflow_library.py
samples/: COMPLETION_SUMMARY.md  CROSS_PLATFORM_SETUP.md  ENV_CONFIGURATION.md  NEW_SAMPLE_CHECKLIST.md  PACKAGE_COMPLIANCE_REVIEW.md  PLATFORM_COMPATIBILITY.md  README.md  TEST_RESULTS.md  test_all_examples.py  verify_cross_platform.py
scripts/: README.md  check_links.py  check_no_internal_imports.py  create_example_requirements.py  dev_agents.py  organize_files.py  populate_example_envs.py  test_cloud_connections.py  test_examples.ps1  update_dependencies.py  verify_install.py
site/: 404.html  index.html  sitemap.xml
skills/: multiply_numbers.py
tests/: benchmark_scale.py  phase5_test_results.json  test_a2a_auth.py  test_a2a_client.py  test_a2a_discovery_cache.py  test_a2a_nested_schema.py  test_adapters.py  test_agent_discovery.py  test_agent_tool_integration.py  test_all_backends.py  test_cli.py  test_code_generator.py  test_code_validation.py  test_collaboration.py  test_composition.py  test_config_and_logger.py  test_control_flow_patterns.py  test_cost_optimizer.py  test_decorators.py  test_discovery_api.py  test_error_recovery.py  test_errors.py  test_external_mcp_adapter.py  test_functions.py  test_gpu_optimization.py  test_hybrid_dispatcher.py  test_idempotency.py  test_loaders.py  test_mcp_adapter.py  test_mcp_client.py  test_monitoring.py  test_nested_json.py  test_orchestrator_agent_step.py  test_otlp_integration.py  test_performance_benchmarks.py  test_phase5_setup.py  test_pii_detector.py  test_planner_integration.py  test_plugin_registry.py  test_programmatic_executor.py  (+33 more)
(+648 files in other folders)
