[project]
name = "toolweaver"
version = "1.0.0"
description = "Production-ready AI tool orchestration with dynamic discovery, semantic search, and workflow composition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Usha Krishnan", email = "your.email@example.com" }
]
keywords = [
    "ai", "llm", "orchestration", "tools", "mcp", "workflows",
    "semantic-search", "prompt-engineering", "cost-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-identity>=1.15.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
# Monitoring backends
wandb = ["wandb>=0.16.0"]
prometheus = ["prometheus-client>=0.19.0"]
monitoring = ["wandb>=0.16.0", "prometheus-client>=0.19.0"]

# LLM providers
gemini = ["google-generativeai>=0.3.0"]

# Local inference
local-models = ["transformers>=4.36.0", "torch>=2.1.0", "accelerate>=0.25.0"]

# Vector databases
qdrant = ["qdrant-client>=1.7.0"]
pinecone = ["pinecone-client>=3.0.0"]

# Distributed cache
redis = ["redis>=5.0.0"]

# Development tools
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All optional dependencies
all = [
    "wandb>=0.16.0",
    "prometheus-client>=0.19.0",
    "google-generativeai>=0.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "qdrant-client>=1.7.0",
    "pinecone-client>=3.0.0",
    "redis>=5.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/ushakrishnan/ToolWeaver"
Documentation = "https://github.com/ushakrishnan/ToolWeaver/tree/main/docs"
Repository = "https://github.com/ushakrishnan/ToolWeaver"
Issues = "https://github.com/ushakrishnan/ToolWeaver/issues"
Changelog = "https://github.com/ushakrishnan/ToolWeaver/releases"

[project.scripts]
# CLI entry points (future)
# toolweaver = "orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orchestrator"]

[tool.setuptools.package-data]
orchestrator = ["py.typed"]

# ============================================================
# Testing Configuration
# ============================================================

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================
# Code Quality Tools
# ============================================================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["B011"]  # assert False

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "azure.*",
    "wandb.*",
    "prometheus_client.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

# ============================================================
# Coverage Configuration
# ============================================================

[tool.coverage.run]
source = ["orchestrator"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
